--- a/Project2/.AL-Go/settings.json
+++ b/Project2/.AL-Go/settings.json
@@ -1,5 +1,10 @@
 {
   "country": "us",
-  "appFolders": [],
-  "testFolders": []
+  "appFolders": [
+    "./app2"
+  ],
+  "testFolders": [],
+  "bcptTestFolders": [],
+  "pageScriptingTests": [ "Recordings" ],
+  "artifact": "//*//latest",
 }
