--- a/Project1/.AL-Go/settings.json
+++ b/Project1/.AL-Go/settings.json
@@ -6,5 +6,5 @@
   "testFolders": [],
   "bcptTestFolders": [],
   "pageScriptingTests": [ "Recordings" ],
-  "artifact": "//*//latest",
+  "artifact": "//*//latest"
 }
