--- a/.github/workflows/Troubleshooting.yaml
+++ b/.github/workflows/Troubleshooting.yaml
@@ -30,7 +30,7 @@ jobs:
           lfs: true
 
       - name: Troubleshooting
-        uses: microsoft/AL-Go-Actions/Troubleshooting@v6.4
+        uses: spetersenms/AL-Go/Actions/Troubleshooting@PageScriptReporter
         with:
           shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
