--- a/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       templateUrl:
-        description: Template Repository URL (current is {TEMPLATEURL})
+        description: Template Repository URL (current is https://github.com/spetersenms/AL-Go@PageScriptReporter)
         required: false
         default: ''
       downloadLatest:
@@ -15,10 +15,6 @@ on:
         description: Direct Commit?
         type: boolean
         default: false
-      includeBranches:
-        description: Specify a comma-separated list of branches to update. Wildcards are supported. The AL-Go settings will be read for every branch. Leave empty to update the current branch only.
-        required: false
-        default: ''
 
 permissions:
   actions: read
@@ -34,117 +30,81 @@ env:
   ALGoRepoSettings: ${{ vars.ALGoRepoSettings }}
 
 jobs:
-  Initialize:
-    runs-on: windows-latest
-    name: Initialize
-    outputs:
-      UpdateBranches: ${{ steps.GetBranches.outputs.Result }}
-      TemplateUrl: ${{ steps.DetermineTemplateUrl.outputs.TemplateUrl }}
+  UpdateALGoSystemFiles:
+    name: 'Update AL-Go System Files'
+    needs: [ ]
+    runs-on: [ windows-latest ]
     steps:
+      - name: Dump Workflow Information
+        uses: spetersenms/AL-Go/Actions/DumpWorkflowInfo@PageScriptReporter
+        with:
+          shell: powershell
+
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
+      - name: Initialize the workflow
+        id: init
+        uses: spetersenms/AL-Go/Actions/WorkflowInitialize@PageScriptReporter
+        with:
+          shell: powershell
+
       - name: Read settings
-        id: ReadSettings
-        uses: microsoft/AL-Go-Actions/ReadSettings@v6.4
+        uses: spetersenms/AL-Go/Actions/ReadSettings@PageScriptReporter
         with:
           shell: powershell
           get: templateUrl
 
-      - name: Get Workflow Multi-Run Branches
-        id: GetBranches
-        uses: microsoft/AL-Go-Actions/GetWorkflowMultiRunBranches@v6.4
-        with:
-          shell: powershell
-          includeBranches: ${{ github.event.inputs.includeBranches }}
-
-      - name: Determine Template URL
-        id: DetermineTemplateUrl
-        env:
-          TemplateUrlAsInput: '${{ github.event.inputs.templateUrl }}'
-        run: |
-            $templateUrl = $env:templateUrl # Available from ReadSettings step
-            if ($ENV:TemplateUrlAsInput) {
-              # Use the input value if it is provided
-              $templateUrl = $ENV:TemplateUrlAsInput
-            }
-            Write-Host "Using template URL: $templateUrl"
-            Add-Content -Encoding UTF8 -Path $env:GITHUB_OUTPUT -Value "TemplateUrl=$templateUrl"
-
-  UpdateALGoSystemFiles:
-    name: "[${{ matrix.branch }}] Update AL-Go System Files"
-    needs: [ Initialize ]
-    runs-on: [ windows-latest ]
-    strategy:
-      matrix:
-        branch: ${{ fromJson(needs.Initialize.outputs.UpdateBranches).branches }}
-      fail-fast: false
-
-    steps:
-      - name: Dump Workflow Information
-        uses: microsoft/AL-Go-Actions/DumpWorkflowInfo@v6.4
-        with:
-          shell: powershell
-
-      - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-          ref: ${{ matrix.branch }}
-
-      - name: Initialize the workflow
-        id: init
-        uses: microsoft/AL-Go-Actions/WorkflowInitialize@v6.4
-        with:
-          shell: powershell
-
-      - name: Read settings
-        uses: microsoft/AL-Go-Actions/ReadSettings@v6.4
-        with:
-          shell: powershell
-          get: commitOptions
-
       - name: Read secrets
         id: ReadSecrets
-        uses: microsoft/AL-Go-Actions/ReadSecrets@v6.4
+        uses: spetersenms/AL-Go/Actions/ReadSecrets@PageScriptReporter
         with:
           shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
           getSecrets: 'ghTokenWorkflow'
 
-      - name: Calculate Commit Options
+      - name: Override templateUrl
         env:
-          directCommit: '${{ github.event.inputs.directCommit }}'
-          downloadLatest: '${{ github.event.inputs.downloadLatest }}'
+          templateUrl: ${{ github.event.inputs.templateUrl }}
         run: |
           $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
-          if('${{ github.event_name }}' -eq 'workflow_dispatch') {
-            Write-Host "Using inputs from workflow_dispatch event"
-            $directCommit = $env:directCommit
-            $downloadLatest = $env:downloadLatest
+          $templateUrl = $ENV:templateUrl
+          if ($templateUrl) {
+            Write-Host "Using Template Url: $templateUrl"
+            Add-Content -Encoding UTF8 -Path $env:GITHUB_ENV -Value "templateUrl=$templateUrl"
           }
-          else {
-            Write-Host "Using inputs from commitOptions setting"
-            $commitOptions = $env:commitOptions | ConvertFrom-Json # Available from ReadSettings step
-            $directCommit=$(-not $commitOptions.createPullRequest)
-            $downloadLatest=$true
+
+      - name: Calculate Input
+        env:
+          directCommit: '${{ github.event.inputs.directCommit }}'
+          downloadLatest: ${{ github.event.inputs.downloadLatest }}
+          eventName: ${{ github.event_name }}
+        run: |
+          $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
+          $directCommit = $ENV:directCommit
+          $downloadLatest = $ENV:downloadLatest
+          Write-Host $ENV:eventName
+          if ($ENV:eventName -eq 'schedule') {
+            Write-Host "Running Update AL-Go System Files on a schedule. Setting DirectCommit and DownloadLatest to true"
+            $directCommit = 'true'
+            $downloadLatest = 'true'
           }
           Add-Content -Encoding UTF8 -Path $env:GITHUB_ENV -Value "directCommit=$directCommit"
           Add-Content -Encoding UTF8 -Path $env:GITHUB_ENV -Value "downloadLatest=$downloadLatest"
 
       - name: Update AL-Go system files
-        uses: microsoft/AL-Go-Actions/CheckForUpdates@v6.4
+        uses: spetersenms/AL-Go/Actions/CheckForUpdates@PageScriptReporter
         with:
           shell: powershell
           token: ${{ fromJson(steps.ReadSecrets.outputs.Secrets).ghTokenWorkflow }}
           downloadLatest: ${{ env.downloadLatest }}
           update: 'Y'
-          templateUrl: ${{ needs.Initialize.outputs.TemplateUrl }}
+          templateUrl: ${{ env.templateUrl }}
           directCommit: ${{ env.directCommit }}
-          updateBranch: ${{ matrix.branch }}
 
       - name: Finalize the workflow
         if: always()
-        uses: microsoft/AL-Go-Actions/WorkflowPostProcess@v6.4
+        uses: spetersenms/AL-Go/Actions/WorkflowPostProcess@PageScriptReporter
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
