--- a/Project1/.AL-Go/settings.json
+++ b/Project1/.AL-Go/settings.json
@@ -5,6 +5,5 @@
   ],
   "testFolders": [],
   "bcptTestFolders": [],
-  "pageScriptingTests": [ "Recordings" ],
-  "artifact": "//*//latest"
+  "pageScriptingTests": [ "Recordings" ]
 }
