--- a/Project2/.AL-Go/settings.json
+++ b/Project2/.AL-Go/settings.json
@@ -5,5 +5,6 @@
   ],
   "testFolders": [],
   "bcptTestFolders": [],
-  "pageScriptingTests": [ "Recordings" ]
+  "pageScriptingTests": [ "Recordings" ],
+  "artifact": "//*//latest",
 }
