--- a/Project1/.AL-Go/settings.json
+++ b/Project1/.AL-Go/settings.json
@@ -5,6 +5,6 @@
   ],
   "testFolders": [],
   "bcptTestFolders": [],
-  "pageScriptingTests": [ "Recordings" ],
+  "pageScriptingTests": [ "Recordings/Scenario1", "Recordings/Scenario2" ],
   "artifact": "//*//latest"
 }
